--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,9 @@
 server {
-    listen       80;
-    server_name  localhost;
+    listen       443 ssl default_server;
+    server_name  yangcs.net;
+    ssl_certificate /etc/letsencrypt/live/www.yangcs.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.yangcs.net/privkey.pem;
+    rewrite ^(.*)$  https://$host$1 permanent;
 
     location / {
         root   /usr/share/nginx/html/public;
